# c-compiler

./: .cursorrules  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  parser.c  parser.h  tokens.h
examples/: arith.c  hello_world.S
src/: codegen.h  common.h  lexer.h  main.c  parser.h  print_assembly.h  print_ast.h  print_sema.h  print_tokens.h  sema.h  tokens.h
test/: lit.cfg.py  lit.site.cfg.py.in
test/basic/: add_sub.c  arithmetic.c  block_var.c  comments.c  define.c  equality.c  expressions.c  function_call.c  function_call_adv.c  if.c  mul_div.c  return.c  while.c
